--- a/pythonlab/flasklab/part2/templates/state.html
+++ b/pythonlab/flasklab/part2/templates/state.html
@@ -17,7 +17,7 @@
     var inputElement = document.getElementById('searchInput');
 </script>
 
-    &nbsp &nbsp &nbspz
+    &nbsp &nbsp &nbsp
     <a href="/pop/"+inputElement;>
       <button>Submit</button>
     </a>
