--- a/pythonlab/flasklab/part2/templates/state.html
+++ b/pythonlab/flasklab/part2/templates/state.html
@@ -11,15 +11,18 @@
         <a href="#contact">Search city Initials</a>
         <input id="searchInput" type="text" placeholder="Search.." />
     </div>
-
+    <script>
+    // Get the input element
+    var inputElement = document.getElementById('searchInput');
+    inputElement.addEventListener('input', function() {
+        // Save the input text in a variable
+        var inputValue = inputElement.value;
+    });
+    </script>
 
 
     &nbsp &nbsp &nbsp
     <a href="/pop/"+inputElement;>
-        <script>
-    // Get the input element
-    var inputElement = document.getElementById('searchInput');
-</script>
       <button>Submit</button>
     </a>
 </body>
