--- a/pythonlab/flasklab/part2/templates/results.html
+++ b/pythonlab/flasklab/part2/templates/results.html
@@ -6,8 +6,8 @@
 </head>
  
 <body>
-    <h2>Fun with Random Numbers</h2>
-    <p>I have asked for a random number is it is:<p>
+    <h2>Fun with With States</h2>
+    <p>You asked for a state here is some info::<p>
 
     <p style="color:red">!!! {{randstr}} !!!</p>
 
