--- a/pythonlab/flasklab/part2/templates/results.html
+++ b/pythonlab/flasklab/part2/templates/results.html
@@ -9,7 +9,9 @@
     <h2>Fun with With States</h2>
     <p>You asked for a state here is some info::<p>
 
-    <p style="color:red">!!! {{randstr}} !!!</p>
+    <h3>!!! {{randstr[0]}} !!!</h3> 
+    <p style="color:blue">!!! {{randstr[1]}} !!!</p>
+    <p style="color:red">!!! {{randstr[2]}} !!!</p>
 
     <a href="/">
       <button>check a new state</button>
