--- a/pythonlab/flasklab/part2/templates/state.html
+++ b/pythonlab/flasklab/part2/templates/state.html
@@ -8,7 +8,7 @@
     <h2>Type a Random two letter abbriviation of a State that you Would You Like?</h2>
 
     <div class="topnav">
-        <a>Search city Initials</a>
+        <a>Search city abbreviation(Two letters only)</a>
         <input id="searchInput" type="text" placeholder="Search.." />
     </div>
     <script>
