--- a/csslab/static/test.css
+++ b/csslab/static/test.css
@@ -1,13 +1,8 @@
-.my-class{
+.class1{
   text-align: center;
   color: blue;
 }
 
-.center-para{
+.topnav{
   text-align: center;
-  margin-top: 20px;
-}
-
-.big-button{
-  font-size: large;
 }
