--- a/csslab/templates/state.html
+++ b/csslab/templates/state.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
  
-<head class="class1" id="hello" > 
-    <title>Fun With States</title>
+<head> 
+    <title class="class1" id="hello" >Fun With States</title>
 </head>
 <body>
     <h2>Type a Random two letter abbriviation of a State that you Would You Like?</h2>
