--- a/csslab/templates/state.html
+++ b/csslab/templates/state.html
@@ -2,10 +2,10 @@
 <html>
  
 <head> 
-    <title>Fun With States</title>
+    <title>Fun With Some States</title>
 </head>
 <body>
-    <h2 class="class1" id="hello" >Type a Random two letter abbriviation of a State that you Would You Like?</h2>
+    <h2 class="class1" id="hello" >Type a Random two letter abbriviation of a State that you Would You Like to see</h2>
 
     <div class="topnav">
         <a>Search city abbreviation(Two letters only)</a>
