--- a/csslab/templates/results.html
+++ b/csslab/templates/results.html
@@ -6,7 +6,7 @@
 </head>
  
 <body>
-    <h2>Fun with With States</h2>
+    <h2 class="class2" id="hello2" >Fun with With States</h2>
     <p>You asked for a state here is some info::<p>
 
     <h3>!!! {{randstr[0]}} !!!</h3> 
