--- a/csslab/templates/state.html
+++ b/csslab/templates/state.html
@@ -2,6 +2,8 @@
 <html>
  
 <head> 
+   <link rel="stylesheet" href="/static/test.css">
+  <script src="/static/test.js"></script>
     <title>Fun With Some States</title>
 </head>
 <body>
