--- a/csslab/templates/state.html
+++ b/csslab/templates/state.html
@@ -24,7 +24,7 @@
 
      &nbsp;&nbsp;&nbsp;
     <a href="#" onclick="submitForm()">
-        <button>Submit</button>
+        <button class="class3" id="hello3">Submit</button>
     </a>
 
     <script>
