--- a/csslab/templates/state.html
+++ b/csslab/templates/state.html
@@ -23,9 +23,11 @@
     </script>
 
      &nbsp;&nbsp;&nbsp;
+    <div class="class3" id="hello3">
     <a href="#" onclick="submitForm()">
-        <button class="class3" id="hello3">Submit</button>
+        <button>Submit</button>
     </a>
+    </div>
 
     <script>
         function submitForm() {
