--- a/csslab/static/test.css
+++ b/csslab/static/test.css
@@ -11,7 +11,6 @@
   color: green;
 }
 .class3{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  text-align:center;
+  color: green;
 }
