--- a/csslab/static/test.css
+++ b/csslab/static/test.css
@@ -1,3 +1,13 @@
+.body {
+  background-color: lightgray; 
+}
+
+.p {
+  background-image: url("static/image.jpg"); 
+  background-repeat: no-repeat; 
+  background-position: center; 
+}
+
 .class1{
   text-align: center;
   color: blue;
