--- a/csslab/templates/results.html
+++ b/csslab/templates/results.html
@@ -11,9 +11,9 @@
     <h2 class="class2" id="hello2" >Fun with With States</h2>
     <p>You asked for a state here is some info::<p>
 
-    <h3>!!! {{randstr[0]}} !!!</h3> 
-    <p style="color:blue">!!! {{randstr[1]}} !!!</p>
-    <p style="color:red">!!! {{randstr[2]}} !!!</p>
+    <h3 class="class6" id="hello6">!!! {{randstr[0]}} !!!</h3> 
+    <p class="class4" id="hello4">!!! {{randstr[1]}} !!!</p>
+    <p class="class5" id="hello5">!!! {{randstr[2]}} !!!</p>
 
     <a href="/">
       <button>check a new state</button>
