--- a/csslab/static/test.css
+++ b/csslab/static/test.css
@@ -23,3 +23,16 @@ body {
   text-align:center;
   color: green;
 }
+
+.class4{
+  text-align:center;
+  color: blue;
+}
+.class5{
+  text-align:center;
+  color: red;
+}
+.class6{
+  text-align:center;
+  color: blue;
+}
