--- a/csslab/templates/results.html
+++ b/csslab/templates/results.html
@@ -9,15 +9,17 @@
  
 <body>
     <h2 class="class2" id="hello2" >Fun with With States</h2>
-    <p>You asked for a state here is some info::<p>
+    <p class="class8" id="hello8">You asked for a state here is some info::<p>
 
     <h3 class="class6" id="hello6">!!! {{randstr[0]}} !!!</h3> 
     <p class="class4" id="hello4">!!! {{randstr[1]}} !!!</p>
     <p class="class5" id="hello5">!!! {{randstr[2]}} !!!</p>
-
+ 
+    <div class="class7" id="hello7">
     <a href="/">
       <button>check a new state</button>
     </a>
+    </div>
 </body>
  
 </html>
