--- a/csslab/static/test.css
+++ b/csslab/static/test.css
@@ -36,3 +36,11 @@ body {
   text-align:center;
   color: blue;
 }
+.class7{
+  text-align:center;
+  color: red;
+}
+.class8{
+  text-align:center;
+  color: blue;
+}
