--- a/csslab/templates/results.html
+++ b/csslab/templates/results.html
@@ -8,7 +8,7 @@
 </head>
  
 <body>
-    <h2 class="class2" id="hello2" >Fun with With States</h2>
+    <h2 class="class2" id="hello2" >Fun With States</h2>
     <p class="class8" id="hello8">You asked for a state here is some info::<p>
 
     <h3 class="class6" id="hello6">!!! {{randstr[0]}} !!!</h3> 
